# energy-todo

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  README.md  docker-compose.yml
.github/: FUNDING.yml  pull_request_template.md
.github/workflows/: release.yml
backend/: Cargo.toml  Dockerfile
backend/seed/: todos.seed.json
backend/src/: errors.rs  main.rs  models.rs  routes.rs  state.rs  storage.rs
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/public/: manifest.json
frontend/src/: App.jsx  main.jsx  styles.css
frontend/src/components/: EnergyBadge.jsx  FilterTabs.jsx  Header.jsx  TaskInput.jsx  ThemeToggle.jsx  TodoCard.jsx
frontend/src/context/: ThemeContext.jsx
frontend/src/hooks/: useTagInputController.js  useTodos.js
