[package]
name = "energy_todo_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3"
actix-files = "0.6"
actix-cors = "0.6"
tokio = { version = "1.47", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing-subscriber = "0.3"
tracing = "0.1"
tracing-actix-web = "0.7"
async-stream = "0.3"
fs2 = "0.4"
